force-app/main/default/objects/CommissionModule__c/CommissionModule__c.object-meta.xml
<CustomObject>
    <label>Commission Module</label>
    <nameField>
        <displayFormat>CM-{00000000}</displayFormat>
        <label>Commission Module Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commission Modules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>