force-app/main/default/objects/CommissionModule__c/fields/CommissionDetail__c.field-meta.xml
<CustomField>
    <fullName>CommissionDetail__c</fullName>
    <label>Commission Detail</label>
    <referenceTo>CommissionDetail__c</referenceTo>
    <relationshipLabel>Commission Modules</relationshipLabel>
    <relationshipName>Commission_Modules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>