force-app/main/default/objects/CommissionModule__c/fields/CompleteRate__c.field-meta.xml
<CustomField>
    <fullName>CompleteRate__c</fullName>
    <label>Complete Rate</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>