force-app/main/default/objects/CommissionModule__c/fields/CompleteRateReal__c.field-meta.xml
<CustomField>
    <fullName>CompleteRateReal__c</fullName>
    <label>Complete Rate Real</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>