force-app/main/default/objects/CommissionModule__c/fields/ModuleCompleteRate__c.field-meta.xml
<CustomField>
    <fullName>ModuleCompleteRate__c</fullName>
    <label>Module Complete Rate</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>