force-app/main/default/objects/CommissionModule__c/fields/ModuleCompleteRateF__c.field-meta.xml
<CustomField>
    <fullName>ModuleCompleteRateF__c</fullName>
    <formula>CASE( RecordType.DeveloperName , 
&apos;Total&apos;,  CompleteRate__c *  CommissionDetail__r.CommissionConfiguration__r.TotalF__c, 
&apos;TV&apos;,  CompleteRate__c *  CommissionDetail__r.CommissionConfiguration__r.TVF__c,
&apos;HA&apos;,  CompleteRate__c *  CommissionDetail__r.CommissionConfiguration__r.HAF__c,
&apos;HighEnd&apos;,  CompleteRate__c *  CommissionDetail__r.CommissionConfiguration__r.HighEndF__c,
&apos;Elements7&apos;,  CompleteRate__c *  CommissionDetail__r.CommissionConfiguration__r.Elements7F__c,
&apos;Reporting&apos;,  CompleteRate__c *  CommissionDetail__r.CommissionConfiguration__r.ReportingF__c,
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Module Complete Rate F</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>