force-app/main/default/objects/CommissionModule__c/recordTypes/Elements7.recordType-meta.xml
<RecordType>
    <fullName>Elements7</fullName>
    <active>true</active>
    <label>Elements7</label>
</RecordType>