force-app/main/default/objects/CommissionModule__c/recordTypes/HA.recordType-meta.xml
<RecordType>
    <fullName>HA</fullName>
    <active>true</active>
    <label>HA</label>
</RecordType>