force-app/main/default/objects/CommissionModule__c/recordTypes/HighEnd.recordType-meta.xml
<RecordType>
    <fullName>HighEnd</fullName>
    <active>true</active>
    <label>High End</label>
</RecordType>