force-app/main/default/objects/CommissionModule__c/recordTypes/Reporting.recordType-meta.xml
<RecordType>
    <fullName>Reporting</fullName>
    <active>true</active>
    <label>Reporting</label>
</RecordType>