force-app/main/default/objects/CommissionModule__c/recordTypes/Total.recordType-meta.xml
<RecordType>
    <fullName>Total</fullName>
    <active>true</active>
    <label>Total</label>
</RecordType>