force-app/main/default/objects/CommissionModule__c/recordTypes/TV.recordType-meta.xml
<RecordType>
    <fullName>TV</fullName>
    <active>true</active>
    <label>TV</label>
</RecordType>